--- a/FRONT-END/components/sgin-up.module.css
+++ b/FRONT-END/components/sgin-up.module.css
@@ -1,11 +1,15 @@
 .form {
-    background-color: white;
-    color: black;
+  background-color: white;
+  color: black;
 }
 
 .submit {
-    background-color: black;
-    color: white;
-    padding: 3px;
-    border-radius: 4px;
+  background-color: black;
+  color: white;
+  padding: 3px;
+  border-radius: 4px;
+}
+
+.input {
+  border: black solid 1px;
 }
