--- a/FRONT-END/app/page.module.css
+++ b/FRONT-END/app/page.module.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
   --gray-rgb: 0, 0, 0;
   --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
   --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
@@ -25,4 +25,4 @@
     --button-secondary-hover: #1a1a1a;
   }
 }
-
+ */
