--- a/FRONT-END/components/navBar.module.css
+++ b/FRONT-END/components/navBar.module.css
@@ -6,11 +6,14 @@
 .nav {
   align-items: center;
   justify-content: space-between;
-  padding: 0 1.5rem;
+  padding: 0.5rem 1.5rem;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
+  backdrop-filter: blur(2px);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .ul {
