--- a/FRONT-END/components/hero.module.css
+++ b/FRONT-END/components/hero.module.css
@@ -4,8 +4,8 @@
   align-items: flex-start;
   justify-content: center;
   height: 100vh;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.497), rgba(255,255,255,1));
-  /* max-width: 1200px; */
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255,255,255,1));
+  max-width: 1000px;
   padding: 0 20px;
 }
 
