--- a/FRONT-END/components/hero.module.css
+++ b/FRONT-END/components/hero.module.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   justify-content: center;
   height: 100vh;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255,255,255,1));
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.782), rgba(255,255,255,1));
   max-width: 1000px;
   padding: 0 20px;
 }
